# rustrocket

./: .env  Cargo.toml  README.md
app/: package.json
app/app/: .env  .env.production  package.json
app/app/public/: index.html
app/app/src/: App.vue
app/app/src/assets/js/: globals.js
migrations/2022-03-18-082443_create_tasks/: up.sql
src/: main.rs  schema.rs
